--- a/app/internal/composer.json
+++ b/app/internal/composer.json
@@ -10,6 +10,10 @@
             "type": "vcs"
         },
         {
+            "url": "git@repo.olcs.dev-dvsacloud.uk:olcs/olcs-auth.git",
+            "type": "vcs"
+        },
+        {
             "url": "https://nexus.olcs.dev-dvsacloud.uk/repository/OLCS",
             "type": "composer"
         },
@@ -41,7 +45,7 @@
         "lm-commons/lmc-rbac-mvc": "^2.6",
         "olcs/olcs-transfer": "~4.206.0",
         "olcs/olcs-utils": "~4.206.0",
-        "olcs/olcs-auth": "~4.206.0",
+        "olcs/olcs-auth": "dev-VOL-3081-GDS-Upgrade",
         "soflomo/purifier": "^1.0",
         "olcs/olcs-logging": "~4.206.0",
         "olcs/olcs-common": "dev-VOL-3081-GDS-Upgrade",
