--- a/app/internal/composer.json
+++ b/app/internal/composer.json
@@ -6,18 +6,6 @@
             "packagist": false
         },
         {
-            "url": "git@repo.olcs.dev-dvsacloud.uk:olcs/olcs-common.git",
-            "type": "vcs"
-        },
-        {
-            "url": "git@repo.olcs.dev-dvsacloud.uk:olcs/olcs-transfer.git",
-            "type": "vcs"
-        },
-        {
-            "url": "git@repo.olcs.dev-dvsacloud.uk:olcs/olcs-auth.git",
-            "type": "vcs"
-        },
-        {
             "url": "https://nexus.olcs.dev-dvsacloud.uk/repository/OLCS",
             "type": "composer"
         },
@@ -48,12 +36,12 @@
         "laminas/laminas-view": "^2.5",
         "doctrine/annotations": "^1.8",
         "lm-commons/lmc-rbac-mvc": "^2.6",
-        "olcs/olcs-transfer": "dev-project/lgv-post-mvp",
+        "olcs/olcs-transfer": "~4.206.0",
         "olcs/olcs-utils": "~4.206.0",
-        "olcs/olcs-auth": "dev-project/lgv-post-mvp",
+        "olcs/olcs-auth": "~4.206.0",
         "soflomo/purifier": "^1.0",
         "olcs/olcs-logging": "~4.206.0",
-        "olcs/olcs-common": "dev-project/lgv-post-mvp",
+        "olcs/olcs-common": "~4.206.0",
         "laminas/laminas-dependency-plugin": "^2.0",
         "firebase/php-jwt": "^6.0"
     },
